--- a/Oblig3/student_performance.ipynb
+++ b/Oblig3/student_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "eb6517ac",
    "metadata": {},
    "outputs": [],
@@ -11,11 +11,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sb\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "from sklearn.model_selection import GridSearchCV, StratifiedKFold, cross_val_score, cross_validate\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold, cross_val_score\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, ConfusionMatrixDisplay\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
     "from sklearn.metrics import make_scorer, get_scorer"
    ]
   },
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 138,
    "id": "dc4858ed",
    "metadata": {},
    "outputs": [],
@@ -1446,7 +1446,11 @@
     "        cv_results.append(pd.DataFrame(grid.cv_results_))\n",
     "        print(\"*\")\n",
     "\n",
-    "    return estimators, pd.DataFrame(scores_train), pd.DataFrame(scores_test), pd.concat(cv_results, names=['test_split'], keys=range(outer_splits))"
+    "    return estimators, pd.DataFrame(scores_train), pd.DataFrame(scores_test), pd.concat(cv_results, names=['test_split'], keys=range(outer_splits))\n",
+    "\n",
+    "def print_estimators(estimators):\n",
+    "    for estimatior in estimators:\n",
+    "        print(estimatior)"
    ]
   },
   {
@@ -1516,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 140,
    "id": "972bc5db",
    "metadata": {},
    "outputs": [
@@ -1524,17 +1528,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[RandomForestClassifier(max_depth=20, min_samples_leaf=2, n_estimators=500,\n",
-      "                       random_state=15), RandomForestClassifier(criterion='entropy', max_depth=25, min_samples_leaf=2,\n",
-      "                       n_estimators=500, random_state=15), RandomForestClassifier(max_depth=20, min_samples_leaf=2, n_estimators=500,\n",
-      "                       random_state=15), RandomForestClassifier(max_depth=20, min_samples_leaf=2, n_estimators=500,\n",
-      "                       random_state=15), RandomForestClassifier(criterion='entropy', max_depth=20, min_samples_leaf=2,\n",
-      "                       n_estimators=500, random_state=15)]\n"
+      "RandomForestClassifier(max_depth=20, min_samples_leaf=2, n_estimators=500,\n",
+      "                       random_state=15)\n",
+      "RandomForestClassifier(criterion='entropy', max_depth=25, min_samples_leaf=2,\n",
+      "                       n_estimators=500, random_state=15)\n",
+      "RandomForestClassifier(max_depth=20, min_samples_leaf=2, n_estimators=500,\n",
+      "                       random_state=15)\n",
+      "RandomForestClassifier(max_depth=20, min_samples_leaf=2, n_estimators=500,\n",
+      "                       random_state=15)\n",
+      "RandomForestClassifier(criterion='entropy', max_depth=20, min_samples_leaf=2,\n",
+      "                       n_estimators=500, random_state=15)\n"
      ]
     }
    ],
    "source": [
-    "print(rf_estimators)"
+    "print_estimators(rf_estimators)"
    ]
   },
   {
@@ -2103,7 +2111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 141,
    "id": "4ef18550",
    "metadata": {},
    "outputs": [
@@ -2111,17 +2119,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[GradientBoostingClassifier(max_depth=2, min_samples_split=8, n_estimators=500,\n",
-      "                           random_state=15, subsample=0.5), GradientBoostingClassifier(max_depth=2, min_samples_split=4, n_estimators=500,\n",
-      "                           random_state=15, subsample=0.5), GradientBoostingClassifier(max_depth=4, min_samples_split=4, n_estimators=500,\n",
-      "                           random_state=15, subsample=0.5), GradientBoostingClassifier(max_depth=4, min_samples_split=4, n_estimators=500,\n",
-      "                           random_state=15, subsample=0.5), GradientBoostingClassifier(max_depth=4, min_samples_split=8, n_estimators=500,\n",
-      "                           random_state=15, subsample=0.5)]\n"
+      "GradientBoostingClassifier(max_depth=2, min_samples_split=8, n_estimators=500,\n",
+      "                           random_state=15, subsample=0.5)\n",
+      "GradientBoostingClassifier(max_depth=2, min_samples_split=4, n_estimators=500,\n",
+      "                           random_state=15, subsample=0.5)\n",
+      "GradientBoostingClassifier(max_depth=4, min_samples_split=4, n_estimators=500,\n",
+      "                           random_state=15, subsample=0.5)\n",
+      "GradientBoostingClassifier(max_depth=4, min_samples_split=4, n_estimators=500,\n",
+      "                           random_state=15, subsample=0.5)\n",
+      "GradientBoostingClassifier(max_depth=4, min_samples_split=8, n_estimators=500,\n",
+      "                           random_state=15, subsample=0.5)\n"
      ]
     }
    ],
    "source": [
-    "print(gb_estimators)"
+    "print_estimators(gb_estimators)"
    ]
   },
   {
@@ -2436,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 137,
    "id": "074c5cac",
    "metadata": {},
    "outputs": [
@@ -2444,21 +2456,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LogisticRegression(C=1, random_state=15, tol=0.001), LogisticRegression(C=0.1, random_state=15, solver='newton-cholesky'), LogisticRegression(C=1, random_state=15, solver='saga', tol=0.01), LogisticRegression(C=10, random_state=15), LogisticRegression(C=1, random_state=15, solver='saga', tol=0.001)]\n"
+      "LogisticRegression(C=1, random_state=15, tol=0.001)\n",
+      "\n",
+      "\n",
+      "LogisticRegression(C=0.1, random_state=15, solver='newton-cholesky')\n",
+      "\n",
+      "\n",
+      "LogisticRegression(C=1, random_state=15, solver='saga', tol=0.01)\n",
+      "\n",
+      "\n",
+      "LogisticRegression(C=10, random_state=15)\n",
+      "\n",
+      "\n",
+      "LogisticRegression(C=1, random_state=15, solver='saga', tol=0.001)\n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(lr_estimators)"
+    "print_estimators(lr_estimators)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "id": "dee1e27d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.7751412429378531,\n",
+       " 'precision': 0.7163045686752584,\n",
+       " 'recall': 0.676679650648324,\n",
+       " 'f1': 0.6854235322553626,\n",
+       " 'roc_auc': 0.8821440055798441}"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def split_targets_and_features(data):\n",
+    "    targets = data['Target']\n",
+    "    features = pd.DataFrame(StandardScaler().fit_transform(data.drop(\"Target\", axis=1)), columns=data.drop(\"Target\", axis=1).columns)\n",
+    "    \n",
+    "    return [features, targets]\n",
+    "\n",
+    "def split_dataset(data):\n",
+    "    data['Target'] = pd.Series(LabelEncoder().fit_transform(data['Target']))\n",
+    "    train = data.groupby(\"Target\", group_keys=False)[df.columns].sample(frac=0.8)\n",
+    "    test = data.drop(train.index)\n",
+    "    train = split_targets_and_features(train)\n",
+    "    test = split_targets_and_features(test)\n",
+    "\n",
+    "    return train, test\n",
+    "\n",
+    "slutt_train, slutt_test = split_dataset(df)\n",
+    "\n",
+    "lr_model = LogisticRegression(C=1, solver='saga', tol=0.001)\n",
+    "lr_model.fit(slutt_train[0], slutt_train[1])\n",
+    "\n",
+    "evaluate(lr_model, slutt_test[0], slutt_test[1])\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
