--- a/Oblig3/abalone_age.ipynb
+++ b/Oblig3/abalone_age.ipynb
@@ -1167,7 +1167,7 @@
     "- For resultatene for denne algoritmen så er det modeller med max_dept = 8 og 12, min_samples_leaf= 8 og 12, og n_estimatiors på 500 som gir best resultat.\n",
     "Hvis vi analysere disse i kontekst av plotene for tuning parameterne så er at det sannsynligvis ikke noen store forskjellig i prestasjon mellom disse \"beste\" modellene, men endringer av parameterne utover dette vil potensielt kunne påvirke prestasjonen til modellen betydelig.\n",
     "\n",
-    "- Når vi ser på resultatene for denne algoritmen så ser vi at det er en betydelig forskjell mellom test og training delen av datasettet noe som tyder på at modellen har en tendens til å overfite under trening. Videre ser vi at test resultatene gir oss en r2 korrelasjon på 0.56 som tyder på at modellen gir oss en moderat korrelasjon til å predikere target verdiene. Gjennomsnittet av Mean_absolute_error ligger på 1.50 og ut i fra en total range på ca. 25 tyder dette på ganske lave feil-verdier for disse prediksjonene. Gjennomsnittet for mean_squared_error på 4.59 tyder også på at det heller ikke er mange store uteliggere i prediksjonene til modellene. Helhetlig tyder dette på at algoritmene klarer å levere en modell med relativt lav feil margin, men at selv korrelasjonen til modellene ikke er høy nok til å gi sterke prediksjoner.\n",
+    "- Når vi ser på resultatene for denne algoritmen så ser vi at det er en betydelig forskjell mellom test og training delen av datasettet noe som tyder på at modellen har en tendens til å overfite under trening. Videre ser vi at test resultatene gir oss en r2 korrelasjon på 0.56 som tyder på at modellen gir oss en moderat korrelasjon til å predikere target verdiene. Gjennomsnittet av Mean_absolute_error ligger på 1.50 og ut i fra en total range på 29 tyder dette på ganske lave feil-verdier for disse prediksjonene. Gjennomsnittet for mean_squared_error på 4.59 tyder også på at det heller ikke er mange store uteliggere i prediksjonene til modellene. Helhetlig tyder dette på at algoritmene klarer å levere en modell med relativt lav feil margin, men at selv korrelasjonen til modellene ikke er høy nok til å gi sterke prediksjoner.\n",
     "\n",
     "ref[1]: Scikit Learn. (u.å) RandomForestRegressor. Hentet 9. November 2025 fra https://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestRegressor.html"
    ]
@@ -1554,7 +1554,7 @@
     "\n",
     "- For denne algoritmen så er det alpha=1 og max_iter=1000 som gir best resultater ved 4 av ytter loopene og på den siste ytter loopen så er det alpha=0.1 og max_iter=1000 som gir best resultat. For ytter loopene så er det deafault verdien (\"auto\") for solver som gir best resultat.  \n",
     "\n",
-    "- Når vi ser på resultatene for denne algoritmen så ser vi at det ikke er stor forskjeller mellom test og training delen av datasettet noe som tyder på at modellen ikke i betydelig grad overfiter ved trening av modellen på dette datasettet.Videre ser vi at test resultatene gir oss en r2 korrelasjon på 0.52 som tyder på at modellen gir oss en moderat korrelasjon til å predikere target verdiene. Med et gjennomsnitt for Mean_absolute_error ligger på 1.61 ut i fra en total range på ca. 25 tyder dette på relativt lave feil-verdier for disse prediksjonene. Modellene gir et gjennomsnitt for mean_squared_error på \n",
+    "- Når vi ser på resultatene for denne algoritmen så ser vi at det ikke er stor forskjeller mellom test og training delen av datasettet noe som tyder på at modellen ikke i betydelig grad overfiter ved trening av modellen på dette datasettet.Videre ser vi at test resultatene gir oss en r2 korrelasjon på 0.52 som tyder på at modellen gir oss en moderat korrelasjon til å predikere target verdiene. Med et gjennomsnitt for Mean_absolute_error ligger på 1.61 ut i fra en total range på 29 tyder dette på relativt lave feil-verdier for disse prediksjonene. Modellene gir et gjennomsnitt for mean_squared_error på \n",
     "5.01 tyder også på at det heller ikke er mange store uteliggere i prediksjonene til modellene. I likhet med RandomForest tyder dette på at algoritmene klarer å levere en modell med relativt lav feil margin, men at selv korrelasjonen til modellene ikke er høy nok til å gi sterke prediksjoner.\n",
     "\n",
     "ref[2]: Scikit Learn. (u.å) Ridge. Hentet 9. November 2025 fra https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Ridge.html"
@@ -1883,6 +1883,115 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "5f7b8082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RandomForest Train</th>\n",
+       "      <th>RandomForest Test</th>\n",
+       "      <th>Ridge Train</th>\n",
+       "      <th>Ridge Test</th>\n",
+       "      <th>Lasso Train</th>\n",
+       "      <th>Lasso Test</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metric</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mean absolute error:</th>\n",
+       "      <td>-1.245437</td>\n",
+       "      <td>-1.503547</td>\n",
+       "      <td>-1.607358</td>\n",
+       "      <td>-1.614774</td>\n",
+       "      <td>-1.607023</td>\n",
+       "      <td>-1.619690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mean squared error:</th>\n",
+       "      <td>-3.172299</td>\n",
+       "      <td>-4.587857</td>\n",
+       "      <td>-4.897749</td>\n",
+       "      <td>-5.012887</td>\n",
+       "      <td>-4.892601</td>\n",
+       "      <td>-5.062456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>r2:</th>\n",
+       "      <td>0.694831</td>\n",
+       "      <td>0.558750</td>\n",
+       "      <td>0.528729</td>\n",
+       "      <td>0.517483</td>\n",
+       "      <td>0.529136</td>\n",
+       "      <td>0.511529</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      RandomForest Train  RandomForest Test  Ridge Train  \\\n",
+       "Metric                                                                     \n",
+       "Mean absolute error:           -1.245437          -1.503547    -1.607358   \n",
+       "Mean squared error:            -3.172299          -4.587857    -4.897749   \n",
+       "r2:                             0.694831           0.558750     0.528729   \n",
+       "\n",
+       "                      Ridge Test  Lasso Train  Lasso Test  \n",
+       "Metric                                                     \n",
+       "Mean absolute error:   -1.614774    -1.607023   -1.619690  \n",
+       "Mean squared error:    -5.012887    -4.892601   -5.062456  \n",
+       "r2:                     0.517483     0.529136    0.511529  "
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slutt_resultat = pd.DataFrame({\n",
+    "    'Metric': ['Mean absolute error:','Mean squared error:','r2:'],\n",
+    "    'RandomForest Train': [rf_scores_train[\"mean_absolute_error\"].mean(), rf_scores_train[\"mean_squared_error\"].mean(), rf_scores_train['r2'].mean()],\n",
+    "    'RandomForest Test': [rf_scores_test[\"mean_absolute_error\"].mean(), rf_scores_test[\"mean_squared_error\"].mean(), rf_scores_test['r2'].mean()],\n",
+    "    'Ridge Train': [ridge_scores_train[\"mean_absolute_error\"].mean(), ridge_scores_train[\"mean_squared_error\"].mean(), ridge_scores_train['r2'].mean()],\n",
+    "    'Ridge Test': [ridge_scores_test[\"mean_absolute_error\"].mean(), ridge_scores_test[\"mean_squared_error\"].mean(), ridge_scores_test['r2'].mean()],\n",
+    "    'Lasso Train': [lasso_scores_train[\"mean_absolute_error\"].mean(), lasso_scores_train[\"mean_squared_error\"].mean(), lasso_scores_train['r2'].mean()],\n",
+    "    'Lasso Test': [lasso_scores_test[\"mean_absolute_error\"].mean(), lasso_scores_test[\"mean_squared_error\"].mean(), lasso_scores_test['r2'].mean()],\n",
+    "})\n",
+    "slutt_resultat.set_index('Metric', inplace=True)\n",
+    "slutt_resultat"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "40f57388",
    "metadata": {},
@@ -1890,9 +1999,9 @@
     "### Avsluttende vurdering\n",
     " - Ut i fra totalen av resultatene så ser det ut til at det er RandomForestRegressor som gir best resultater for dette datasettet med en avsluttene modell \"RandomForestRegressor(max_depth=12, min_samples_leaf=8, n_estimators=500)\" eller \"RandomForestRegressor(max_depth=8, min_samples_leaf=12, n_estimators=500)\". Ut i fra tuning plotene til modellene så ser det ikke ut som det vil være noe stor forskjell mellom disse to modellen.\n",
     "\n",
-    " - Det er imidlertid hvert å merke seg at prestasjonen til RandomForestRegressor modellen ikke er veldig mye bedre enn for både Ridge og Lasso og begge disse ser ut til å være enda mer stabile og potensielt mindre utsatt for overfiting.\n",
+    " - Hvis vi ser på forskjellene for RandomForest kontra Ridge og Lasso så prestere RandomForest bedre for alle test metricene som er inkluderet, men det er ikke stor forskjeller i prestasjonene mellom disse algoritmene. Det imidlertid større forskjell mellom train og test resultatene for RandomForest enn det er for Ridge og Lasso, dette tyder på at RandomForest har større utfordringer med overfiting kontra de andre to algoritmene for dette datasettet. Det er også vært å nevne at RandomForest er betydelig mer tidkrevende å trene og tune på en god måte med nested CV, så ved videre bruk av denne typen modell vil det være viktig å kjøre en vurdering i forhold til tids bruk kontra prestasjon av modellen. \n",
     "\n",
-    " - Totaltsett tyder resultatene fra dette datasettet på at det kan gi prediksjoner med relativt lav feilmargin, men at korrelasjonen mellom feature verdiene og target verdiene ikke er så sterk. Dette var forsåvitt også på pekti i kilden til datasete og at det muligens var behov for mere data grunnlag som tar høyde for forskjellig miljø påvirkning for å bedre kunne estimere alder/ringer for adalonene [4].\n",
+    " - Totaltsett tyder resultatene for dette datasettet på at det kan gi prediksjoner med relativt lav feilmargin når du ser mean absolute error opp mot toalt rangen av target verdier i datasettet, men at korrelasjonen mellom feature verdiene og target verdiene ikke er så sterk. Dette var forsåvitt også påpekt i kilden til datasete, og at det muligens var behov for mere data grunnlag som tar høyde for forskjellig miljø påvirkning for å bedre kunne estimere alder/ringer for adalonene [4].\n",
     "\n",
     " ref [4]: UC Irvine. (u.å) Abalone. Hentet 9. November 2025 fra https://archive.ics.uci.edu/dataset/1/abalone"
    ]
