--- a/Oblig3/student_performance.ipynb
+++ b/Oblig3/student_performance.ipynb
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 151,
    "id": "dc4858ed",
    "metadata": {},
    "outputs": [],
@@ -2448,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 152,
    "id": "074c5cac",
    "metadata": {},
    "outputs": [
@@ -2457,20 +2457,10 @@
      "output_type": "stream",
      "text": [
       "LogisticRegression(C=1, random_state=15, tol=0.001)\n",
-      "\n",
-      "\n",
       "LogisticRegression(C=0.1, random_state=15, solver='newton-cholesky')\n",
-      "\n",
-      "\n",
       "LogisticRegression(C=1, random_state=15, solver='saga', tol=0.01)\n",
-      "\n",
-      "\n",
       "LogisticRegression(C=10, random_state=15)\n",
-      "\n",
-      "\n",
-      "LogisticRegression(C=1, random_state=15, solver='saga', tol=0.001)\n",
-      "\n",
-      "\n"
+      "LogisticRegression(C=1, random_state=15, solver='saga', tol=0.001)\n"
      ]
     }
    ],
@@ -2480,21 +2470,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 156,
+   "id": "d2bdac2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RandomForest Train</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Metric</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Accuracy:</th>\n",
+       "      <td>0.972988</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Precision:</th>\n",
+       "      <td>0.980638</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Recall:</th>\n",
+       "      <td>0.960067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>F1:</th>\n",
+       "      <td>0.969552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Roc_auc</th>\n",
+       "      <td>0.999364</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            RandomForest Train\n",
+       "Metric                        \n",
+       "Accuracy:             0.972988\n",
+       "Precision:            0.980638\n",
+       "Recall:               0.960067\n",
+       "F1:                   0.969552\n",
+       "Roc_auc               0.999364"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "slutt_resultat = pd.DataFrame({\n",
+    "    'Metric': ['Accuracy:','Precision:','Recall:', 'F1:', 'Roc_auc'],\n",
+    "    'RandomForest Train': [rf_scores_train['accuracy'].mean(),rf_scores_train['precision'].mean(), rf_scores_train['recall'].mean(), rf_scores_train['f1'].mean(), rf_scores_train['roc_auc'].mean()]\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    })\n",
+    "slutt_resultat.set_index('Metric', inplace=True)\n",
+    "slutt_resultat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "id": "dee1e27d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.7751412429378531,\n",
-       " 'precision': 0.7163045686752584,\n",
-       " 'recall': 0.676679650648324,\n",
-       " 'f1': 0.6854235322553626,\n",
-       " 'roc_auc': 0.8821440055798441}"
+       "{'accuracy': 0.7853107344632768,\n",
+       " 'precision': 0.7320639325727208,\n",
+       " 'recall': 0.6892556950551979,\n",
+       " 'f1': 0.6980173847536514,\n",
+       " 'roc_auc': 0.8950325580355499}"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
