--- a/Oblig3/student_performance.ipynb
+++ b/Oblig3/student_performance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 4,
    "id": "eb6517ac",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,8 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, fbeta_score\n",
     "from sklearn.metrics import make_scorer, get_scorer, PrecisionRecallDisplay\n",
-    "from sklearn.base import BaseEstimator, ClassifierMixin"
+    "from sklearn.base import BaseEstimator, ClassifierMixin\n",
+    "import tensorflow as tf"
    ]
   },
   {
@@ -3622,7 +3623,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -3636,7 +3637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
