opprettelse av felles mappe oblig 3og 4

--- a/oblig3_og_4/oblig_4_abalone_age.ipynb
+++ b/oblig3_og_4/oblig_4_abalone_age.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "854f3bf3",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
     "from sklearn.preprocessing import LabelEncoder, MinMaxScaler, StandardScaler\n",
     "from sklearn.model_selection import GridSearchCV, StratifiedKFold, cross_val_score\n",
     "\n",
-    "import tensorflow as tf\n",
+    "# import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Input, Dense, Dropout\n",
     "from tensorflow.keras.optimizers import Adam, RMSprop\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c00ed039",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"..\\oblig3\\abalone.data\", sep=\",\", names=[\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\", \"Shell weight\", \"Rings\"])\n",
+    "df = pd.read_csv(r\"..\\oblig3_og_4\\abalone.data\", sep=\",\", names=[\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\", \"Shell weight\", \"Rings\"])\n",
     "df.info()"
    ]
   },
