--- a/oblig3_og_4/abalone_age.ipynb
+++ b/oblig3_og_4/abalone_age.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 1,
    "id": "feeba066",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "id": "f7f98a42",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"..\\oblig3\\abalone.data\", sep=\",\", names=[\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\", \"Shell weight\", \"Rings\"])\n",
+    "df = pd.read_csv(r\"..\\oblig3_og_4\\abalone.data\", sep=\",\", names=[\"Sex\", \"Length\", \"Diameter\", \"Height\", \"Whole weight\", \"Shucked weight\", \"Viscera weight\", \"Shell weight\", \"Rings\"])\n",
     "df.info()"
    ]
   },
@@ -2015,7 +2015,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2029,7 +2029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
