--- a/oblig3_og_4/oblig4_student_performacne.ipynb
+++ b/oblig3_og_4/oblig4_student_performacne.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": null,
    "id": "221c8f5f",
    "metadata": {},
    "outputs": [],
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": null,
    "id": "21532bea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r\"..\\oblig3\\student_performance.csv\", delimiter=\";\")\n"
+    "df = pd.read_csv(r\"..\\oblig3_og_4\\student_performance.csv\", delimiter=\";\")\n"
    ]
   },
   {
